--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
                 <div class="first-container-wrapper">
                     <h1>Réservez le menu qui vous convient</h1>
                     <p><span class="sub">Découvrez des restaurants d'exception, séléctionnés par nos soins.</span></p>
-                    <button class="explorer"
-                        type="button">
+                    <button class="explorer" type="button">
                         Explorer nos restaurants
                     </button>
                 </div>
