--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <title>OhMyFood!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
 </head>
     <body>
         <header>
             <div id="head">
+                <span><i class="fas fa-arrow-left"></i></span>
                 <img class= "logo" src="images/logo/ohmyfood.png" alt="Logo">
             </div>
         </header>
@@ -29,15 +30,15 @@
             </section>
             <section class="second-container">
                 <h2>Fonctionnement</h2>
-                <div class="infos">
-                    <ul>
-                        <li><i class="fa fa-mobile" aria-hidden="true"></i>Choissisez un restaurant</li>
+                <div class="second-container-wrapper">
+                    <ol>
+                        <li><i class="fas fa-mobile-alt"></i></i>Choissisez un restaurant</li>
                         <li><i class="fa fa-list-ul" aria-hidden="true"></i>Composez votre menu</li>
-                        <li><i class="fa fa-coffee" aria-hidden="true"></i>Dégustez au restaurant</li>
-                </ul>     
+                        <li class="background"><i class="fa fa-coffee" aria-hidden="true"></i>Dégustez au restaurant</li>
+                    </ol>     
                 </div>
             </section>
-            <section>
+            <section class="thrid-container">
                 <h3>Restaurants</h3>
                     <div>
                         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
