--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <h2>Fonctionnement</h2>
                 <div class="second-container-wrapper">
                     <ol>
-                        <li><i class="fas fa-mobile-alt"></i></i>Choissisez un restaurant</li>
-                        <li><i class="fa fa-list-ul" aria-hidden="true"></i>Composez votre menu</li>
-                        <li class="background"><i class="fa fa-coffee" aria-hidden="true"></i>Dégustez au restaurant</li>
+                        <li class="top"><i class="fas fa-mobile-alt"></i></i>Choissisez un restaurant</li>
+                        <li class="top"><i class="fa fa-list-ul" aria-hidden="true"></i>Composez votre menu</li>
+                        <li class="background"><i class="fas fa-store"></i></i>Dégustez au restaurant</li>
                     </ol>     
                 </div>
             </section>
@@ -44,39 +44,40 @@
                         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
                             <figure class="card"><img class="image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" >
                                 <figcaption class=""><p>La palette du goût</p> <p class="subtitles"> Ménilmontant</p>
-                                    <i class="fa fa-heart-o" aria-hidden="true"></i>     
+                                    <span><i class="far fa-heart"></i> </span> 
+                                        
                                 </figcaption>
                             </figure>
                         </a>
                         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-                            <figure class="card"><img class="image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" >
+                            <figure class="card"><img class="image" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" >
                                 <figcaption class=""><p>La note enchantée</p> <p class="subtitles"> Charonne</p>
-                                    <i class="fa fa-heart-o" aria-hidden="true"></i>     
+                                    <span><i class="far fa-heart"></i> </span>         
                                 </figcaption>
                             </figure>
                         </a>
                         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-                            <figure class="card"><img class="image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" >
+                            <figure class="card"><img class="image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" >
                                 <figcaption class=""><p>A la française</p> <p class="subtitles"> Cité rouge</p>
-                                    <i class="fa fa-heart-o" aria-hidden="true"></i>     
+                                    <span><i class="far fa-heart"></i> </span>       
                                 </figcaption>
                             </figure>
                         </a>
                         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-                            <figure class="card"><img class="image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" >
+                            <figure class="card"><img class="image" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" >
                                 <figcaption class=""><p>Le délice des sens</p> <p class="subtitles"> Folie-Méricourt</p>
-                                    <i class="fa fa-heart-o" aria-hidden="true"></i>     
+                                    <span><i class="far fa-heart"></i> </span>   
                                 </figcaption>
                             </figure>
                         </a>   
                     </div>
             </section>
         <footer>
-            <div>
-                <h3><img src="images/logo/ohmyfood.png" alt=""></h3>
+            <div class="end">
+                <h3><img src="images/logo/ohmyfood@2xwhite.svg" alt=""></h3>
                     <ul>
-                        <li><i class="fa fa-cutlery" aria-hidden="true"></i> Proposer un restaurant</li>
-                        <li><i class="fa fa-handshake-o" aria-hidden="true"></i>Devenir partenaire</li>
+                        <li><i class="fas fa-utensils"></i></i> Proposer un restaurant</li>
+                        <li><i class="fas fa-handshake"></i></i>Devenir partenaire</li>
                         <li>Mentions Légales</li>
                         <li>Contact</li>
                     </ul>
