--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <section class="thrid-container">
                 <h3>Restaurants</h3>
                     <div>
-                            <figure class="card"><img class="image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" >
+                            <figure class="card">
+                                <a href="pages/patlette.html"><img class="image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" ></a>
                                 <figcaption class="figcap">
                                     <p>La palette du goût</p>
                                     <button class="heart" type="button">
@@ -52,7 +53,8 @@
                                         
                                 </figcaption>
                             </figure>
-                            <figure class="card"><img class="image" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" >
+                            <figure class="card">
+                                <a href="pages/note.html"><img class="image" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" ></a>
                                 <figcaption class="figcap">
                                     <p>La note enchantée</p>
                                     <button class="heart" type="button">
@@ -63,7 +65,8 @@
                                 </figcaption>
                             </figure>
 
-                            <figure class="card"><img class="image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" >
+                            <figure class="card">
+                                <a href="pages/francaise.html"><img class="image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" ></a>
                                 <figcaption class="figcap">
                                     <p>A la française</p> 
                                     <button class="heart" type="button">
@@ -74,7 +77,8 @@
                                 </figcaption>
                             </figure>
 
-                            <figure class="card"><img class="image" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" >
+                            <figure class="card">
+                                <a href="pages/delice.html"><img class="image" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" ></a>
                                 <figcaption class="figcap">
                                     <p>Le délice des sens</p>
                                     <button class="heart" type="button">
