--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div id="head">
-                <span><i class="fas fa-arrow-left"></i></span>
+                <a href="./index.html"><span><i class="fas fa-arrow-left"></i></span></a>
                 <img class= "logo" src="images/logo/ohmyfood.png" alt="Logo">
             </div>
         </header>
