--- a/pages/patlette.html
+++ b/pages/patlette.html
@@ -14,15 +14,20 @@
     <body>
         <header>
             <div id="head">
-                <span><i class="fas fa-arrow-left"></i></span>
+                <a href="/index.html"><span><i class="fas fa-arrow-left"></i></span></a>
                 <img class= "logo" src="images/logo/ohmyfood.png" alt="Logo">
             </div>
         </header>
         <div class="overlap"><img class="banniere" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""></div>
         <div class="title">
             <h1>La palette du goût
-                 <button class="heart" type="button">
-                <i class="fas fa-heart"></i>
+                <svg class="heartsvg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path fill="currentColor" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z">
+                </path>
+                </svg>
+                    <button class="heart" type="button">
+                    
+                
                 </button>
             </h1>
         </div>
