Base spinner css

--- a/pages/patlette.html
+++ b/pages/patlette.html
@@ -12,6 +12,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
     </head>
     <body>
+        <div class="loader-container">
+            <div class="loader"></div>
+        </div>
         <header>
             <div id="head">
                 <a href="/index.html"><span><i class="fas fa-arrow-left"></i></span></a>
@@ -137,6 +140,5 @@
                     </ul>
             </div>    
         </footer>
-
     </body>
 </html>
