--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet"> 
 </head>
     <body>
+        <div class="loader-container">
+            <div class="loader"></div>
+        </div>
+
         <header>
             <div id="head">
                 <a href="./index.html"><span><i class="fas fa-arrow-left"></i></span></a>
