--- a/pages/patlette.html
+++ b/pages/patlette.html
@@ -136,7 +136,7 @@
                         <li><i class="fas fa-utensils"></i></i> Proposer un restaurant</li>
                         <li><i class="fas fa-handshake"></i></i>Devenir partenaire</li>
                         <li>Mentions Légales</li>
-                        <li>Contact</li>
+                        <li><a href="mailto:someone@yoursite.com">Contacts</a></li>
                     </ul>
             </div>    
         </footer>
