--- a/pages/note.html
+++ b/pages/note.html
@@ -7,7 +7,7 @@
         <link rel="shortcut icon" href="images/logo/favicon.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"/>
         <title>OhMyFood!</title>
-        <link rel="stylesheet" href="style2.css">
+        <link rel="stylesheet" href="/style2.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
     </head>
@@ -24,12 +24,10 @@
         <div class="overlap"><img class="banniere" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt=""></div>
         <div class="title">
             <h1>La palette du goût
-                <svg class="heartsvg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                    <path fill="currentColor" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z">
-                </path>
-                </svg>
-                    <button class="heart" type="button">
-                    
+                <button class="heart" type="button">
+                    <i class="far fa-heart"></i>
+                    <i class="fas fa-heart"></i> 
+                </button>
                 
                 </button>
             </h1>
