--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
                 <h3>Restaurants</h3>
                     <div>
                             <figure class="card">
-                                <a href="pages/patlette.html"><img class="image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" ></a>
+                                <a href="pages/patlette.html">
+                                    <div class="new">
+                                        <p>Nouveau</p>
+                                    </div>
+                                    <img class="image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" >
+                                </a>
                                 <figcaption class="figcap">
                                     <p>La palette du goût</p>
                                     <button class="heart" type="button">
@@ -63,7 +68,12 @@
                                 </figcaption>
                             </figure>
                             <figure class="card">
-                                <a href="pages/note.html"><img class="image" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" ></a>
+                                <a href="pages/note.html">
+                                    <div class="new">
+                                        <p>Nouveau</p>
+                                    </div>
+                                    <img class="image" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" >   
+                                </a>
                                 <figcaption class="figcap">
                                     <p>La note enchantée</p>
                                     <button class="heart" type="button">
