--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
             </div>
         </header>
             <section class="first-container">
-                <div class="place"><p><i class="fas fa-map-marker-alt" id="map"></i>Paris, Belleville</p></div>
+                <div class="place">
+                    <form>
+                        <p><i class="fas fa-map-marker-alt" id="map"></i>
+                            <input type="text" placeholder="Paris, Belleville" >
+                    </form>
+                </div>
                 <div class="first-container-wrapper">
                     <h1>Réservez le menu qui vous convient</h1>
                     <p><span class="sub">Découvrez des restaurants d'exception, séléctionnés par nos soins.</span></p>
