Rectifications mentorat + clean

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                     <ol>
                         <li class="top"><i class="fas fa-mobile-alt"></i></i>Choissisez un restaurant</li>
                         <li class="top"><i class="fa fa-list-ul" aria-hidden="true"></i>Composez votre menu</li>
-                        <li class="background"><i class="fas fa-store"></i></i>Dégustez au restaurant</li>
+                        <li class="top"><i class="fas fa-store"></i></i>Dégustez au restaurant</li>
                     </ol>     
                 </div>
             </section>
             <section class="thrid-container">
                 <h3>Restaurants</h3>
-                    <div>
+                    <div class="first-cards-container">
                             <figure class="card">
                                 <a href="pages/patlette.html">
                                     <div class="new">
@@ -89,7 +89,8 @@
                                              
                                 </figcaption>
                             </figure>
-
+                    </div>
+                    <div class="second-cards-container">
                             <figure class="card">
                                 <a href="pages/francaise.html"><img class="image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" ></a>
                                 <figcaption class="figcap">
@@ -124,7 +125,7 @@
                         <li><i class="fas fa-utensils"></i></i> Proposer un restaurant</li>
                         <li><i class="fas fa-handshake"></i></i>Devenir partenaire</li>
                         <li>Mentions Légales</li>
-                        <li><a href="mailto:someone@yoursite.com">Contacts</a></li>
+                        <li><a href="mailto:popielarzmanon@gmail.com">Contacts</a></li>
                     </ul>
             </div>    
         </footer>
