--- a/pages/note.html
+++ b/pages/note.html
@@ -23,7 +23,7 @@
         </header>
         <div class="overlap"><img class="banniere" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt=""></div>
         <div class="title">
-            <h1>La palette du goût
+            <h1>La note enchantée
                 <button class="heart" type="button">
                     <i class="far fa-heart"></i>
                     <i class="fas fa-heart"></i> 
@@ -35,6 +35,7 @@
 
         <section class="first-container">
             <div class="first-container-wrapper">
+                
                 <h2>ENTREES</h2>
                 <div class="container">
                     <p class="bold">Ravioles de foie gras </p>
@@ -129,12 +130,6 @@
             </div>
 
         </section>
-
-
-
-
-
-
         <footer>
             <div class="end">
                 <h3><img src="images/logo/ohmyfood@2xwhite.svg" alt=""></h3>
@@ -142,7 +137,7 @@
                         <li><i class="fas fa-utensils"></i></i> Proposer un restaurant</li>
                         <li><i class="fas fa-handshake"></i></i>Devenir partenaire</li>
                         <li>Mentions Légales</li>
-                        <li><a href="mailto:someone@yoursite.com">Contacts</a></li>
+                        <li><a href="mailto:popielarzmanon@gmail.com">Contacts</a></li>
                     </ul>
             </div>    
         </footer>
