--- a/pages/note.html
+++ b/pages/note.html
@@ -17,7 +17,7 @@
         </div>
         <header>
             <div id="head">
-                <a href="/index.html"><span><i class="fas fa-arrow-left"></i></span></a>
+                <a href="index.html"><span><i class="fas fa-arrow-left"></i></span></a>
                 <img class= "logo" src="images/logo/ohmyfood.png" alt="Logo">
             </div>
         </header>
