--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <h2>Fonctionnement</h2>
                 <div class="second-container-wrapper">
                     <ol>
-                        <li class="top"><i class="fas fa-mobile-alt"></i></i>Choissisez un restaurant</li>
+                        <li class="top"><i class="fas fa-mobile-alt"></i>Choissisez un restaurant</li>
                         <li class="top"><i class="fa fa-list-ul" aria-hidden="true"></i>Composez votre menu</li>
-                        <li class="top"><i class="fas fa-store"></i></i>Dégustez au restaurant</li>
+                        <li class="top"><i class="fas fa-store"></i>Dégustez au restaurant</li>
                     </ol>     
                 </div>
             </section>
@@ -124,8 +124,8 @@
             <div class="end">
                 <h3><img src="images/logo/ohmyfood@2xwhite.svg" alt=""></h3>
                     <ul>
-                        <li><i class="fas fa-utensils"></i></i> Proposer un restaurant</li>
-                        <li><i class="fas fa-handshake"></i></i>Devenir partenaire</li>
+                        <li><i class="fas fa-utensils"></i> Proposer un restaurant</li>
+                        <li><i class="fas fa-handshake"></i>Devenir partenaire</li>
                         <li>Mentions Légales</li>
                         <li><a href="mailto:popielarzmanon@gmail.com">Contacts</a></li>
                     </ul>
