--- a/pages/delice.html
+++ b/pages/delice.html
@@ -133,8 +133,8 @@
             <div class="end">
                 <h3><img src="images/logo/ohmyfood@2xwhite.svg" alt=""></h3>
                     <ul>
-                        <li><i class="fas fa-utensils"></i></i> Proposer un restaurant</li>
-                        <li><i class="fas fa-handshake"></i></i>Devenir partenaire</li>
+                        <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
+                        <li><i class="fas fa-handshake"></i>Devenir partenaire</li>
                         <li>Mentions Légales</li>
                         <li><a href="mailto:someone@yoursite.com">Contacts</a></li>
                     </ul>
