--- a/pages/francaise.html
+++ b/pages/francaise.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="../style2.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="loader-container">
