--- a/pages/francaise.html
+++ b/pages/francaise.html
@@ -131,7 +131,7 @@
 
         <footer>
             <div class="end">
-                <h3>ohmyfood></h3>
+                <h3>ohmyfood</h3>
                     <ul>
                         <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
                         <li><i class="fas fa-handshake"></i>Devenir partenaire</li>
