--- a/pages/note.html
+++ b/pages/note.html
@@ -137,7 +137,7 @@
         </section>
         <footer>
             <div class="end">
-                <h3>ohmyfood></h3>
+                <h3>ohmyfood</h3>
                     <ul>
                         <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
                         <li><i class="fas fa-handshake"></i>Devenir partenaire</li>
